cmake_minimum_required (VERSION 3.12)

find_package (range-v3 CONFIG REQUIRED)
find_package (fmt REQUIRED)

configure_file(input_file_loader.cpp.in input_file_loader.cpp @ONLY)
add_library(aoc-helper ${CMAKE_CURRENT_BINARY_DIR}/input_file_loader.cpp)
target_include_directories(aoc-helper PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_features(aoc-helper PUBLIC cxx_std_20)

function(aoc2020 number)
  add_executable(day${number} "day${number}.cpp")
  target_link_libraries (day${number} PUBLIC range-v3::range-v3 fmt::fmt aoc-helper)
endfunction()

aoc2020(1)
aoc2020(2)
aoc2020(3)
aoc2020(4)
aoc2020(5)
aoc2020(6)
aoc2020(7)
aoc2020(8)
aoc2020(9)
aoc2020(10)
aoc2020(11)
